<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/search_ic"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/language"
        android:title="@string/language"
        app:showAsAction="never"/>
    <item
        android:id="@+id/student"
        android:title="@string/request_course"
        app:showAsAction="never"/>
    <item
        android:id="@+id/instructor"
        android:title="@string/instructor_menu"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/contact"
        android:title="@string/contact"
        app:showAsAction="never"/>
    <item
        android:id="@+id/sign_out_menu"
        android:title="@string/sign_out"
        app:showAsAction="never"/>

</menu>