<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".placeOwner">

        <TextView
            android:id="@+id/txtmsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:textSize="25sp"
            android:text="@string/studenr_form"
            android:textAlignment="center"
            android:textColor="#054540"/>

        <EditText
            android:id="@+id/txtname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:textSize="25sp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:paddingStart="20dp" />

        <EditText
            android:id="@+id/txtmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:textSize="25sp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp" />

        <EditText
            android:id="@+id/txtphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:textSize="25sp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone"
            android:paddingStart="20dp" />

       <!-- <EditText
            android:id="@+id/txtpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:textSize="25sp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:paddingStart="20dp" />-->
        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/icon_selector"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            >

            <android.support.design.widget.TextInputEditText
                android:hint="@string/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text"
                android:id="@+id/txtpass"
                android:ems="10"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:textSize="25sp" />
        </android.support.design.widget.TextInputLayout>


        <EditText
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:textSize="25sp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:hint="@string/birthdate"
            android:inputType="date"
            android:paddingStart="20dp" />

        <Button
            android:id="@+id/btnreg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="25sp"
            android:background="@drawable/button_shape"
            android:fontFamily="@font/roboto_regular"
            android:paddingStart="15dp"
            android:text="@string/register"
            android:textColor="#054540" />




    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />
</RelativeLayout>