<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Signin">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_person_black_36dp"
        android:layout_marginTop="115sp"
        android:layout_marginBottom="5sp"
        android:layout_marginStart="25sp"
        android:layout_marginEnd="25sp"/>
    <TextView
        android:id="@+id/txtmsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/common_signin_button_text"
        android:textAlignment="center"
        android:textColor="#054540"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/txtmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:textSize="25sp"/>
    <!--<EditText
        android:id="@+id/txtpass"
        android:hint="@string/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:textSize="25sp"/>-->
    <android.support.design.widget.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/icon_selector"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        >

        <android.support.design.widget.TextInputEditText
            android:hint="@string/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text"
            android:id="@+id/txtpass"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:textSize="25sp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnsignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"

        android:background="@drawable/button_shape"
        android:fontFamily="@font/roboto_regular"
        android:paddingStart="15dp"
        android:text="@string/common_signin_button_text"
        android:textColor="#054540"
        android:textSize="25sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_already"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/clickhere"
            android:onClick="signin"
            android:textColor="#03A9F4"
            android:textSize="15sp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/forget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/forget"
        android:onClick="forget"
        android:textColor="#03A9F4"
        android:textSize="15sp"/>


</LinearLayout>
<ProgressBar
android:id="@+id/progressBar"
style="?android:attr/progressBarStyleLarge"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_centerHorizontal="true"
android:layout_centerVertical="true" />
    </RelativeLayout>